--- a/javascript/详细的学习计划.md
+++ b/javascript/详细的学习计划.md
@@ -1,13 +1,13 @@
 当你开始学习 JavaScript 时，可以按照以下学习计划逐步掌握基础和提高技能。这个计划是一个大致的指南，你可以根据自己的学习速度和兴趣进行调整。
 
-### 阶段一：入门基础
+## 阶段一：入门基础
 
-#### **第一周：初步了解**
+### **第一周：初步了解**
    - 学习 JavaScript 的基本概念，包括变量、数据类型、运算符、条件语句、循环、函数、类、事件、数组、对象。
    - 掌握如何使用浏览器的控制台进行简单的 JavaScript 代码执行。
 当你在第一周进行初步了解 JavaScript 时，以下是更详细的学习计划和一些练习题目。
 
-### 学习计划：
+#### 学习计划：
 
 1. **JavaScript 基础概念**
    - **任务：** 了解 JavaScript 的起源和在 Web 开发中的角色，安装代码编辑器，创建简单 HTML 文件引入 JavaScript。
@@ -53,8 +53,96 @@
 
 
 
+###  **第二周：深入DOM**
 
-2. **第二周：深入DOM**
+#### 1. **DOM 基础概念和操作：**
+   - **主题：** 了解什么是 DOM，掌握基础 DOM 操作。
+   - **任务：**
+     - 学习 DOM 是什么，它代表文档的哪部分。
+     - 掌握通过 JavaScript 获取元素的方法，如 `getElementById`，`getElementsByClassName`，`querySelector` 等。
+     - 学习如何修改元素的内容、样式和属性。
+
+   - **练习题：**
+     - 编写一个脚本，通过 ID 获取一个元素并修改其文本内容。
+     - 使用类名选择器获取一组元素，然后修改它们的样式。
+
+#### 2. **DOM 事件处理：**
+   - **主题：** 理解 DOM 事件模型，学习事件处理的基本原理。
+   - **任务：**
+     - 了解 DOM 事件模型的三个阶段：捕获阶段、目标阶段、冒泡阶段。
+     - 学习如何通过 JavaScript 添加事件监听器，使用 `addEventListener`。
+     - 掌握事件对象的基本属性，如 `target`，`type`。
+
+   - **练习题：**
+     - 创建一个按钮，添加点击事件，点击时在控制台打印一条信息。
+     - 创建一个输入框，实现在用户输入时动态更新页面上的另一个元素。
+
+#### 3. **DOM 操作进阶：**
+   - **主题：** 深入学习 DOM 操作的高级方法。
+   - **任务：**
+     - 学习如何创建、插入和删除元素，使用 `createElement`，`appendChild`，`removeChild`。
+     - 掌握如何复制节点，使用 `cloneNode`。
+     - 理解 DOM 的样式操作，如何动态修改元素的样式。
+
+   - **练习题：**
+     - 创建一个动态列表，用户可以通过输入框添加新项，点击项可以删除。
+
+#### 4. **DOM 遍历和节点关系：**
+   - **主题：** 学习如何遍历 DOM 树，理解节点之间的关系。
+   - **任务：**
+     - 学习如何遍历元素的子节点，父节点，兄弟节点。
+     - 了解节点类型，如元素节点、文本节点等。
+     - 熟悉 `childNodes`，`parentNode`，`nextSibling` 等属性。
+
+   - **练习题：**
+     - 创建一个深度为 3 层的嵌套列表，编写脚本遍历输出所有节点的类型和内容。
+
+#### 5. **DOM 操作的性能优化：**
+   - **主题：** 了解 DOM 操作的性能问题和优化方法。
+   - **任务：**
+     - 理解频繁的 DOM 操作对性能的影响。
+     - 学习如何使用文档片段（DocumentFragment）批量操作节点。
+     - 掌握事件委托的概念和实现，减少事件处理器的数量。
+
+   - **练习题：**
+     - 创建一个动态表格，包含添加和删除行的功能，优化操作以提高性能。
+
+#### 6. **异步操作和 AJAX：**
+   - **主题：** 掌握通过 JavaScript 进行异步操作和使用 AJAX 请求数据。
+   三种异步：settimeout 定时器； ajax ，通过http 来异步请求；promise， 另外一种回调比settimeout 高级，最适合有先后依赖关系的异步
+   - **任务：**
+     - 了解 JavaScript 的异步编程，学习回调函数和 Promise。
+     // promise 通过 then 和 catch 来设置回调函数
+     - 学习使用 XMLHttpRequest 对象发送 AJAX 请求。
+
+   - **练习题：**
+     - 创建一个简单的待办事项列表，通过 AJAX 请求添加和删除任务。
+
+#### 7. **DOM 库和框架：**
+   - **主题：** 介绍常见的 DOM 操作库和框架。
+   - **任务：**
+     - 了解常见的 DOM 操作库，如 jQuery。
+     - 学习使用现代 JavaScript 框架，如 React、
+
+   - **练习题：**
+     - 使用 jQuery 或其他 DOM 操作库重构之前的练习，比较原生和库的异同。
+
+#### 8. **综合实践和项目：**
+   - **主题：** 将所学知识应用到一个小型项目中。
+   - **任务：**
+     - 选择一个简单的项目，如待办事项应用或简易画廊。
+     - 运用 DOM 操作、事件处理、异步请求等知识完成项目。
+
+   - **练习题：**
+     - 创建一个交互性强、用户体验良好的项目，应用所学 DOM 操作的各个方面。
+
+
+#####  **第三周：异步编程**
+
+   - 理解 JavaScript 的异步编程模型，学习使用回调函数处理异步任务。
+   - 介绍 Promise 的基本概念和使用。
+
+#####  **第四周：ES6+**
    - 学习文档对象模型（DOM）的基础，了解如何选择、修改和操作网页中的元素。
    - 编写简单的页面交互代码，例如按钮点击事件。
 
